--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
 <h1>Welcome to Yelpdemo!</h1>
 <h2>This is one of the sample applications for BaseRails, a platform that teaches people to build awesome custom websites with the Ruby on Rails programming language.</h2>
+<p>Sign up and start learning today!</p>
